--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Big grid's poppin' with <i class="fa fa-twitter"></i> Bootstrap</a>
+          <a class="navbar-brand" href="#">hey buddy!!!! <i class="fa fa-twitter"></i> Bootstrap</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <!-- <ul class="nav navbar-nav">
