--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </nav>
 
     <div class="container-fluid">
-        <div class="jumbotron"><h1>Big grid's poppin' bottles with Bootstrap</h1></div>
+        <div class="jumbotron"><h1>who are you looking at right now?!</h1></div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
