--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
         <div class="jumbotron"><h1>who are you looking at right now?!</h1></div>
     </div>
 
+    <img src=http://www.zwani.com/graphics/hello_funny/images/56467.jpg>
+    
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
 
